--- a/packages/celer-e2e-test/Justfile
+++ b/packages/celer-e2e-test/Justfile
@@ -1,17 +1,21 @@
 lint:
     pylint scripts
 
-build:
+build EXT="":
     @just ../../buildrs --release
+    cp ../../target/release/celer-devtool{{EXT}} celer{{EXT}}
 
-test FAILONLY="": build
-    python3 scripts/e2e.py test ../../target/release/celer-devtool {{FAILONLY}}
+test EXT="":
+    @just build {{EXT}}
+    python3 scripts/e2e.py test ./celer{{EXT}}
 
-run-test TEST: build
-    python3 scripts/e2e.py test ../../target/release/celer-devtool -t {{TEST}}
+run-test TEST EXT="":
+    @just build {{EXT}}
+    python3 scripts/e2e.py test ./celer{{EXT}} -t {{TEST}}
 
-run-config TEST CONFIG: build
-    python3 scripts/e2e.py test ../../target/release/celer-devtool -t {{TEST}} -c {{CONFIG}}
+run-config TEST CONFIG EXT="":
+    @just build {{EXT}}
+    python3 scripts/e2e.py test ./celer{{EXT}} -t {{TEST}} -c {{CONFIG}}
 
 clean:
     python3 scripts/e2e.py clean
@@ -21,3 +25,6 @@ clean-test TEST:
 
 alias r:=run-test
 alias c:=run-config
+
+diff TEST CONFIG FILE:
+    diff tests/{{TEST}}/test_output/{{CONFIG}}/expected/{{FILE}} tests/{{TEST}}/test_output/{{CONFIG}}/actual/{{FILE}}
