--- a/packages/celer-e2e-test/tests/new/config.toml
+++ b/packages/celer-e2e-test/tests/new/config.toml
@@ -2,14 +2,14 @@
 args = ["new"]
 stdin = "stdin.txt"
 stdout = "stdout.expected.txt"
-expected = "expected"
+expected = ["expected", "input"]
 
 [[test]]
 args = ["--new"]
 error = true
-expected = "input"
+expected = ["input"]
 
 [[test]]
 args = ["-n"]
 error = true
-expected = "input"
+expected = ["input"]
