--- a/packages/celer-e2e-test/tests/build_basic/config.toml
+++ b/packages/celer-e2e-test/tests/build_basic/config.toml
@@ -1,69 +1,78 @@
 [[test]]
 args = ["build"]
-expected = ["expected_bundle_json", "input"]
+input = ["basic"]
+expected = ["expected_bundle_json", "../../inputs/basic"]
 error = true
 stdout = "stdout.expected.txt"
 
 [[test]]
 args = ["build", "-t", "bundle"]
-expected = ["expected_bundle_json", "input"]
+input = ["basic"]
+expected = ["expected_bundle_json", "../../inputs/basic"]
 error = true
 stdout = "stdout.expected.txt"
 
 [[test]]
 args = ["build", "--target", "bundle"]
-expected = ["expected_bundle_json", "input"]
+input = ["basic"]
+expected = ["expected_bundle_json", "../../inputs/basic"]
 error = true
 stdout = "stdout.expected.txt"
 
 [[test]]
 args = ["build", "-D"]
-expected = ["expected_bundle_debug", "input"]
+input = ["basic"]
+expected = ["expected_bundle_debug", "../../inputs/basic"]
 error = true
 stdout = "stdout.expected.txt"
 
 [[test]]
 args = ["build", "-t", "bundle", "-D"]
-expected = ["expected_bundle_debug", "input"]
+input = ["basic"]
+expected = ["expected_bundle_debug", "../../inputs/basic"]
 error = true
 stdout = "stdout.expected.txt"
 
 [[test]]
 args = ["build", "--debug"]
-expected = ["expected_bundle_debug", "input"]
+input = ["basic"]
+expected = ["expected_bundle_debug", "../../inputs/basic"]
 error = true
 stdout = "stdout.expected.txt"
 
 [[test]]
 args = ["build", "-y"]
-expected = ["expected_bundle_yaml", "input"]
+input = ["basic"]
+expected = ["expected_bundle_yaml", "../../inputs/basic"]
 error = true
 stdout = "stdout.expected.txt"
 
 [[test]]
 args = ["build", "--yaml"]
-expected = ["expected_bundle_yaml", "input"]
+input = ["basic"]
+expected = ["expected_bundle_yaml", "../../inputs/basic"]
 error = true
 stdout = "stdout.expected.txt"
 
 [[test]]
 args = ["build", "--yaml", "--target", "bundle"]
-expected = ["expected_bundle_yaml", "input"]
+input = ["basic"]
+expected = ["expected_bundle_yaml", "../../inputs/basic"]
 error = true
 stdout = "stdout.expected.txt"
 
 # Error cases
 [[test]]
 args = ["--build"] # invalid subcommand
-expected = ["input"]
+expected = []
 error = true
 
 [[test]]
 args = ["build", "-t", "notatarget"] # invalid target
-expected = ["input"]
+expected = []
 error = true
 
 [[test]]
 args = ["build", "-D", "-y"] # use debug and yaml
-expected = ["input"]
+expected = []
 error = true
