--- a/.github/workflows/main_pr.yml
+++ b/.github/workflows/main_pr.yml
@@ -107,8 +107,8 @@ jobs:
     - name: Just ts-lint
       run: just -f .justci ci-ts-lint
 
-  run-test:
-    name: Test
+  run-unit-test:
+    name: Unit Test
     #
     runs-on: ubuntu-latest
     steps:
@@ -134,8 +134,8 @@ jobs:
           pyyaml
           pylint
           pylint-quotes
-    - name: Just test
-      run: just -f .justci ci-test
+    - name: Just unit-test
+      run: just -f .justci ci-unit-test
 
   cargo-build:
     name: Build Devtool
@@ -166,6 +166,66 @@ jobs:
           pylint-quotes
     - name: Just cargo
       run: just -f .justci ci-cargo
+
+  e2e-test:
+    name: Devtool E2E Test
+    strategy: { matrix: { os: [ ubuntu-latest, macos-latest ] } }
+    runs-on: ${{ matrix.os }}
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Just e2e-test
+      run: just -f .justci ci-e2e-test
+
+  e2e-test-windows:
+    name: Devtool E2E Test for Windows
+    #
+    runs-on: windows-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Just e2e-test-windows
+      run: just -f .justci ci-e2e-test-windows
 
   web-build:
     name: Build Web
