--- a/packages/celer-e2e-test/Justfile
+++ b/packages/celer-e2e-test/Justfile
@@ -3,22 +3,24 @@ lint:
 
 build EXT="":
     @just ../../buildrs --release
-    cp ../../target/release/celer-devtool{{EXT}} celer{{EXT}}
+    @mkdir -p build
+    @cp ../../target/release/celer-devtool{{EXT}} build/celer{{EXT}}
 
 test EXT="":
     @just build {{EXT}}
-    python3 scripts/e2e.py test ./celer{{EXT}}
+    python3 scripts/e2e.py test build/celer{{EXT}}
 
 run-test TEST EXT="":
     @just build {{EXT}}
-    python3 scripts/e2e.py test ./celer{{EXT}} -t {{TEST}}
+    python3 scripts/e2e.py test build/celer{{EXT}} -t {{TEST}}
 
 run-config TEST CONFIG EXT="":
     @just build {{EXT}}
-    python3 scripts/e2e.py test ./celer{{EXT}} -t {{TEST}} -c {{CONFIG}}
+    python3 scripts/e2e.py test build/celer{{EXT}} -t {{TEST}} -c {{CONFIG}}
 
 clean:
     python3 scripts/e2e.py clean
+    rm -rf build
 
 clean-test TEST:
     python3 scripts/e2e.py clean -t {{TEST}}
