--- a/.github/workflows/main_push.yml
+++ b/.github/workflows/main_push.yml
@@ -172,6 +172,10 @@ jobs:
     #
     runs-on: windows-latest
     steps:
+    - name: Setup | Windows Line End (CRLF)
+      run: |
+        git config --global core.autocrlf false
+        git config --global core.eol crlf
     - name: Setup | Checkout
       uses: actions/checkout@v2
     - name: Setup | Rust
