--- a/packages/celer-code-generator/src/github-actions.dev_pr.yml
+++ b/packages/celer-code-generator/src/github-actions.dev_pr.yml
@@ -9,42 +9,51 @@ on:
 jobs:
 codegen begin
 DefineJobStart check,Health Check,ubuntu-latest,#
+CommonSetup
 JustCIJob check
 codegen end
 
 codegen begin
 DefineJobStart rs-lint,Lint RS,ubuntu-latest,#
+CommonSetup
 JustCIJob rs-lint
 codegen end
 
 codegen begin
 DefineJobStart ts-lint,Lint TS,ubuntu-latest,#
+CommonSetup
 SetupNode
 JustCIJob ts-lint
 codegen end
 
 codegen begin
 DefineJobStart run-unit-test,Unit Test,ubuntu-latest,#
+CommonSetup
 JustCIJob unit-test
 codegen end
 
 codegen begin
 DefineJobStart cargo-build,Build Devtool,${{ matrix.os }},strategy: { matrix: { os: [ ubuntu-latest\, macos-latest\, windows-latest ] } }
+CommonSetup
 JustCIJob cargo
 codegen end
 
 codegen begin
 DefineJobStart e2e-test,Devtool E2E Test,${{ matrix.os }},strategy: { matrix: { os: [ ubuntu-latest\, macos-latest ] } }
+CommonSetup
 JustCIJob e2e-test
 codegen end
 
 codegen begin
 DefineJobStart e2e-test-windows,Devtool E2E Test for Windows,windows-latest,#
+SetWindowsLineEnd
+CommonSetup
 JustCIJob e2e-test-windows
 codegen end
 
 codegen begin
 DefineJobStart web-build,Build Web,ubuntu-latest,#
+CommonSetup
 SetupNode
 SetupWasmPack
 JustCIJob web-build
@@ -52,6 +61,7 @@ codegen end
 
 codegen begin
 DefineJobStart vsce-build,Build VSCE,ubuntu-latest,#
+CommonSetup
 SetupNode
 JustCIJob vsce-build
 codegen end
