--- a/packages/celer-code-generator/src/github-actions.dev_push.yml
+++ b/packages/celer-code-generator/src/github-actions.dev_push.yml
@@ -9,37 +9,45 @@ on:
 jobs:
 codegen begin
 DefineJobStart check,Health Check,ubuntu-latest,#
+CommonSetup
 JustCIJob check
 codegen end
 
 codegen begin
 DefineJobStart rs-lint,Lint RS,ubuntu-latest,#
+CommonSetup
 JustCIJob rs-lint
 codegen end
 
 codegen begin
 DefineJobStart ts-lint,Lint TS,ubuntu-latest,#
+CommonSetup
 SetupNode
 JustCIJob ts-lint
 codegen end
 
 codegen begin
 DefineJobStart run-unit-test,Unit Test,ubuntu-latest,#
+CommonSetup
 JustCIJob unit-test
 codegen end
 
 codegen begin
 DefineJobStart e2e-test,Devtool E2E Test,${{ matrix.os }},strategy: { matrix: { os: [ ubuntu-latest\, macos-latest ] } }
+CommonSetup
 JustCIJob e2e-test
 codegen end
 
 codegen begin
 DefineJobStart e2e-test-windows,Devtool E2E Test for Windows,windows-latest,#
+SetWindowsLineEnd
+CommonSetup
 JustCIJob e2e-test-windows
 codegen end
 
 codegen begin
 DefineJobStart cargo-build-ubuntu,Build Devtool (Ubuntu),ubuntu-latest,#
+CommonSetup
 JustCIJob cargo-release
 JustCIJob cargo-tar-ubuntu
 UploadArtifact cdt-ubuntu,release-ci/celer-devtool-x86_64-linux.tar.gz
@@ -47,6 +55,7 @@ codegen end
 
 codegen begin
 DefineJobStart cargo-build-macos,Build Devtool (Mac OS),macos-latest,#
+CommonSetup
 JustCIJob cargo-release
 JustCIJob cargo-tar-macos
 UploadArtifact cdt-macos,release-ci/celer-devtool-x86_64-darwin.tar.gz
@@ -54,6 +63,7 @@ codegen end
 
 codegen begin
 DefineJobStart cargo-build-windows,Build Devtool (Windows),windows-latest,#
+CommonSetup
 JustCIJob cargo-release
 JustCIJob cargo-tar-windows
 UploadArtifact cdt-windows,release-ci/celer-devtool-x86_64-windows.tar.gz
@@ -61,6 +71,7 @@ codegen end
 
 codegen begin
 DefineJobStart web-build,Build Web,ubuntu-latest,#
+CommonSetup
 SetupNode
 SetupWasmPack
 SkipJobWIP web-test
@@ -71,6 +82,7 @@ codegen end
 
 codegen begin
 DefineJobStart vsce-build,Build VSCE,ubuntu-latest,#
+CommonSetup
 SetupNode
 JustCIJob vsce-build
 JustCIJob vsix
