attempt 3: add back windows line ending and change how stdout and stderr are compared

--- a/packages/celer-code-generator/src/github-actions.pub.yml
+++ b/packages/celer-code-generator/src/github-actions.pub.yml
@@ -41,6 +41,7 @@ codegen end
 
 codegen begin
 DefineJobStart e2e-test-windows,Devtool E2E Test for Windows,windows-latest,#
+SetWindowsLineEnd
 CommonSetup
 JustCIJob e2e-test-windows
 codegen end
