--- a/packages/celer-web-app/Justfile
+++ b/packages/celer-web-app/Justfile
@@ -1,3 +1,5 @@
+WASM_DIR := "src/data/libs/libceler/wasm/"
+
 install:
     npm install
 
@@ -12,14 +14,19 @@ lint:
 lint-fix:
     npm run lint -- --fix
 
-build:
-    @just ../celer-lib/apply
-    wget -q -O binaryen.tar.gz https://github.com/WebAssembly/binaryen/releases/download/version_105/binaryen-version_105-x86_64-linux.tar.gz
-    mkdir -p bin
-    tar -xzvf binaryen.tar.gz -C bin
-    mv -f src/data/wasmlib/celer_bg.wasm src/data/wasmlib/celer_bg_unoptimized.wasm
-    ./bin/binaryen-version_105/bin/wasm-opt src/data/wasmlib/celer_bg_unoptimized.wasm -O3 -o src/data/wasmlib/celer_bg.wasm
+build: wasm
+    wget -q -O {{WASM_DIR}}binaryen.tar.gz https://github.com/WebAssembly/binaryen/releases/download/version_105/binaryen-version_105-x86_64-linux.tar.gz
+    tar -xzvf {{WASM_DIR}}binaryen.tar.gz -C {{WASM_DIR}}
+    mv -f {{WASM_DIR}}celer_bg.wasm {{WASM_DIR}}celer_bg_unoptimized.wasm
+    {{WASM_DIR}}binaryen-version_105/bin/wasm-opt {{WASM_DIR}}/celer_bg_unoptimized.wasm -O3 -o {{WASM_DIR}}/celer_bg.wasm
     npm run build
+
+# Build wasm from celer lib and copy the file over
+wasm:
+    @just ../celer-lib/build
+    rm -rf {{WASM_DIR}}
+    cp -R ../celer-lib/pkg {{WASM_DIR}}
+    
 
 watch:
     npm run start
