--- a/packages/celer-e2e-test/tests/build_circular/expected/bundle.yaml
+++ b/packages/celer-e2e-test/tests/build_circular/expected/bundle.yaml
@@ -1,11 +1,10 @@
----
 _config: {}
-_globalError: "Circular Dependency Found: Trace: [\"_route\", \"D\", \"A\", \"B\", \"C\"] -> A"
+_globalError: 'Circular Dependency Found: Trace: ["_route", "D", "A", "B", "C"] -> A'
 _project:
   authors:
-    - ""
+  - ''
   description: Bundler should detect circular dependency
   name: Circular Dependency Test
-  url: ""
+  url: ''
   version: 0.1.0
 _route: []
