set up CI, test workflow 1

--- a/packages/celer-code-generator/src/github-actions.dev_pr.yml
+++ b/packages/celer-code-generator/src/github-actions.dev_pr.yml
@@ -65,3 +65,9 @@ CommonSetup
 SetupNode
 JustCIJob vsce-build
 codegen end
+
+codegen begin
+DefineJobStart wiki-build,Build Wiki,ubuntu-latest,#
+CommonSetup
+JustCIJob wiki-release
+codegen end
