--- a/packages/celer-code-generator/src/github-actions.pub.yml
+++ b/packages/celer-code-generator/src/github-actions.pub.yml
@@ -6,6 +6,9 @@ on:
     tags:
       - "v*.*.*"
       - "webv*.*.*" # web only release
+  
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
 codegen begin
@@ -97,3 +100,15 @@ JustCIJob vsix
 JustCIJob release-notes
 DraftRelease release-ci/celer.vsix 
 codegen end
+
+codegen begin
+DefineJobStart wiki-build,Build Wiki,ubuntu-latest,#
+CommonSetup
+JustCIJob wiki-release
+codegen end
+    - name: Publish Wiki
+      uses: SwiftDocOrg/github-wiki-publish-action@v1
+      with:
+        path: packages/celer-wiki/release
+      env:
+        GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
