--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -10,6 +10,9 @@ on:
     tags:
       - "v*.*.*"
       - "webv*.*.*" # web only release
+  
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   check:
@@ -424,3 +427,39 @@ jobs:
         body_path: release-ci/RELEASE_NOTES.txt
         files: |
           release-ci/celer.vsix
+
+  wiki-build:
+    name: Build Wiki
+    #
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Just wiki-release
+      run: just -f .justci ci-wiki-release
+    - name: Publish Wiki
+      uses: SwiftDocOrg/github-wiki-publish-action@v1
+      with:
+        path: packages/celer-wiki/release
+      env:
+        GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
