--- a/packages/celer-web-app/package.json
+++ b/packages/celer-web-app/package.json
@@ -51,6 +51,8 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
+    "react-native": "^0.68.1",
+    "react-native-web": "^0.18.9",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
@@ -93,7 +95,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.5"
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-native": "^0.70.6"
   },
   "jest": {
     "roots": [
