Reverted linter change

--- a/packages/celer-vscode-extension/.eslintrc.json
+++ b/packages/celer-vscode-extension/.eslintrc.json
@@ -28,6 +28,10 @@
                 "SwitchCase": 1
             }
         ],
+        "linebreak-style": [
+            "warn",
+            "unix"
+        ],
         "quotes": [
             "warn",
             "double"
