--- a/packages/celer-web-app/package.json
+++ b/packages/celer-web-app/package.json
@@ -145,6 +145,10 @@
       "jsx",
       "node"
     ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
