--- a/packages/celer-code-generator/src/github-actions.dev_pr.yml
+++ b/packages/celer-code-generator/src/github-actions.dev_pr.yml
@@ -29,6 +29,7 @@ codegen end
 codegen begin
 DefineJobStart run-unit-test,Unit Test,ubuntu-latest,#
 CommonSetup
+SetupNode
 JustCIJob unit-test
 codegen end
 
