--- a/packages/celer-code-generator/src/github-actions.dev_push.yml
+++ b/packages/celer-code-generator/src/github-actions.dev_push.yml
@@ -32,6 +32,7 @@ codegen end
 codegen begin
 DefineJobStart run-unit-test,Unit Test,ubuntu-latest,#
 CommonSetup
+SetupNode
 JustCIJob unit-test
 codegen end
 
@@ -89,7 +90,7 @@ CommonSetup
 SetupNode
 JustCIJob vsce-build
 JustCIJob vsix
-UploadArtifact vsix,release-ci/celer.vsix 
+UploadArtifact vsix,release-ci/celer.vsix
 codegen end
 
 codegen begin
