--- a/packages/celer-code-generator/src/github-actions.pub.yml
+++ b/packages/celer-code-generator/src/github-actions.pub.yml
@@ -6,7 +6,7 @@ on:
     tags:
       - "v*.*.*"
       - "webv*.*.*" # web only release
-  
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -33,6 +33,7 @@ codegen end
 codegen begin
 DefineJobStart run-unit-test,Unit Test,ubuntu-latest,#
 CommonSetup
+SetupNode
 JustCIJob unit-test
 codegen end
 
@@ -98,7 +99,7 @@ SetupNode
 JustCIJob vsce-build
 JustCIJob vsix
 JustCIJob release-notes
-DraftRelease release-ci/celer.vsix 
+DraftRelease release-ci/celer.vsix
 codegen end
 
 codegen begin
