add clone submodules

--- a/.github/workflows/main_pr.yml
+++ b/.github/workflows/main_pr.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -48,6 +50,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -78,6 +82,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -114,6 +120,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -150,6 +158,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -180,6 +190,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -214,6 +226,8 @@ jobs:
         git config --global core.eol crlf
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -244,6 +258,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -284,6 +300,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -320,6 +338,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
