--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -52,6 +54,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -82,6 +86,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -118,6 +124,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -154,6 +162,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -188,6 +198,8 @@ jobs:
         git config --global core.eol crlf
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -218,6 +230,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -260,6 +274,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -302,6 +318,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -344,6 +362,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -393,6 +413,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
@@ -441,6 +463,8 @@ jobs:
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
       with:
