update base-lint config

--- a/scripts/base-lint.toml
+++ b/scripts/base-lint.toml
@@ -3,16 +3,16 @@ ignore = [
     "build/",
     "release/",
     "node_modules/",
-    ".git",
+    ".git/",
     ".github/workflows/",
     "__pycache__/",
-    ".vscode",
+    ".vscode/",
     "target/",
-    "binaryen-version_105",
+    "binaryen-version_105/",
     "scripts/base-lint/",
     "pkg/",
     "wasm/",
-    ".cargo",
+    ".cargo/",
     "test_output/",
 
     ".log",
