--- a/scripts/base-lint.toml
+++ b/scripts/base-lint.toml
@@ -6,6 +6,7 @@ ignore = [
     ".git/",
     ".github/workflows/",
     "__pycache__/",
+    ".vscode/",
     "target/",
     "binaryen-version_105/",
     "scripts/base-lint/",
