--- a/packages/celer-e2e-test/tests/custom_icons/expected_yaml/bundle.yaml
+++ b/packages/celer-e2e-test/tests/custom_icons/expected_yaml/bundle.yaml
@@ -14,6 +14,8 @@ _route:
 - Hello World:
   - My first line:
       icon: my-custom-icon
+      split-type: UserDefined
   - _Shrine::JaBaij
   - custom:
       icon: castle-medoh
+      split-type: UserDefined
