--- a/packages/celer-devtool/Cargo.toml
+++ b/packages/celer-devtool/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "celer-devtool"
-version = "2.2.0"
+version = "2.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,3 +17,4 @@ chrono = "0.4.19"
 clap = { version = "3.2.17", features = ["derive"] }
 panic-message = "0.3.0"
 const_format = "0.2.26"
+base64 = "0.13.0"
