Changed submodule prefix from git@github.com: to https://github.com/

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "scripts/base-lint"]
 	path = scripts/base-lint
-	url = git@github.com:iTNTPiston/base-lint
+	url = https://github.com/iTNTPiston/base-lint
 [submodule "scripts/version-sync"]
 	path = scripts/version-sync
-	url = git@github.com:iTNTPiston/version-sync
+	url = https://github.com/iTNTPiston/version-sync
 [submodule "scripts/typescript-layers"]
 	path = scripts/typescript-layers
-	url = git@github.com:iTNTPiston/typescript-layers
+	url = https://github.com/iTNTPiston/typescript-layers
